# controllers/student.controlers.js
@@ -3,7 +3,7 @@ import { generateUniqueCode, maskEmail, sendResponse, validatePassword } from ".
 import RefreshTokenModel from "../model/RefreshToken.js"
 import StudentModel from "../model/Student.js"
 import moment from "moment";
-import { createKeypair } from "../stellar/stellar.mjs";
+import { createKeypair, fundWithFriendbot } from "../stellar/stellar.mjs";
 import KeyModel from "../model/Key.js";
 import crypto from 'crypto'
 
@@ -43,11 +43,14 @@ export async function register(req, res) {
         })
 
         //create user key
-        await KeyModel.create({
+        const newUserKey = await KeyModel.create({
             userId,
             stellarPublic: stellerKey?.publicKey,
             stellarSecretEncrypted: stellerKey?.secret
         })
+
+        //fund user account
+        await fundWithFriendbot(stellerKey?.publicKey)
 
         //send welcome email
         sendWelcomeEmail({
